RESOLVED FIXED51983
Back/Forward entries in WebKit2 leak
https://bugs.webkit.org/show_bug.cgi?id=51983
Summary Back/Forward entries in WebKit2 leak
Darin Adler
Reported 2011-01-05 22:40:01 PST
Back/Forward entries in WebKit2 leak
Attachments
Patch (12.78 KB, patch)
2011-01-05 22:56 PST, Darin Adler
ggaren: review+
Darin Adler
Comment 1 2011-01-05 22:56:50 PST
Geoffrey Garen
Comment 2 2011-01-05 23:00:44 PST
Comment on attachment 78099 [details] Patch r=me ChangeLog could use some more detail.
Darin Adler
Comment 3 2011-01-05 23:01:28 PST
(In reply to comment #2) > ChangeLog could use some more detail. LOL. I have a real ChangeLog!
Early Warning System Bot
Comment 4 2011-01-05 23:10:26 PST
Darin Adler
Comment 5 2011-01-05 23:12:57 PST
Build Bot
Comment 6 2011-01-05 23:25:22 PST
Darin Adler
Comment 7 2011-01-06 14:48:35 PST
Note You need to log in before you can comment on or make changes to this bug.